--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://katniss-nataliia.github.io/goit-js-hw-10/",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /html-group-project/"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-10/"
   },
   "repository": {
     "type": "git",
